# agent-scan-platform

./: .gitignore  IDEA.md  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  alembic.ini  collect_v4210.txt  pyproject.toml  send_test_event.ps1  start_services.bat  start_services.ps1  start_services.sh  stop_services.ps1  stop_services.sh
doc/: ENTERPRISE_ACCEPTANCE_REPORT_v4_2_10.md  FINAL_ACCEPTANCE_CHECKLIST.md  LITE_MODE_SPEC.md  OPERATIONS_DEPLOYMENT.md  RELEASE_NOTES_v4_2_10.md  RELEASE_NOTES_v4_2_9.md  SECURITY_BOUNDARY.md  SPEC_VALIDATION.md  USER_GUIDE.md  agent_security_assessment_prototype.html  agent_security_assessment_spec.md  agent_security_assessment_v4_2_10_enterprise_release_gate_spec.md  agent_security_assessment_v4_2_5_observability_e2e_iteration_spec.md  agent_security_assessment_v4_2_6_acceptance_gap_spec.md  agent_security_assessment_v4_2_7_discovery_experience_core_e2e_spec.md  agent_security_assessment_v4_2_8_asset_normalization_mcp_skill_e2e_spec.md  agent_security_assessment_v4_2_9_final_delivery_closure_spec.md  agent_security_assessment_v4_2_probe_otel_observability_plan.md  agent_security_trial_flow_A_lightweight.md  agent_security_trial_flow_B_formal_poc.md
tests/: test_api_contract.py  test_frontend_static.py  test_lite_mode.py  test_real_scan_pipeline.py  test_v4210_artifact_gc.py  test_v4210_auth_policy.py  test_v4210_completeness_result_binding.py  test_v4210_finding_rollup.py  test_v4210_incremental_scan.py  test_v4210_otel_backpressure.py  test_v4210_otel_receiver_hardening.py  test_v4210_probe_capability_lifecycle.py  (+41 more)
(+204 files in other folders)
